fix(core): 修复JSON操作方法兼容性并降级Java版本至JDK17
- 将getFirst()替换为get(0)以确保与JDK17的兼容性
- 在application.properties中添加JDK17兼容性更新说明
- 降低maven.compiler.source和target从21到17
- 更新依赖库版本以支持JDK17运行环境
- 修复Redis JSON相关操作的索引访问方式
- 确保集群客户端和连接池客户端的兼容性改动